5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1846_1278.log
== TEST (2019-06-26 15:27:28) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	i=(saida%10)-1
	j=(destino%10)-1
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:27:52) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	i=(saida%10)-1
	j=(destino%10)-1
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- EXECUTION TIME:
1.11685
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
0
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
0
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:29) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	i=(saida%10)-1
	j=(destino%10)-1
soma=soma=mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- ERROR:
File "XXXX", line 12
    saida=destino
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:46) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	i=(saida%10)-1
	j=(destino%10)-1
	soma=soma=mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:29:11) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	i=(saida%10)-1
	j=(destino%10)-1
	soma=soma=mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- EXECUTION TIME:
1.31323
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
11
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
11
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:30:17) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	
	i=(saida%10)-1
	j=(destino%10)-1
	
	soma=soma+mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:30:37) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	
	i=(saida%10)-1
	j=(destino%10)-1
	
	soma=soma+mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- EXECUTION TIME:
1.16998
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:30:37) 
-- CODE:
from numpy import*
saida=int(input("sainda de cidade: "))
destino=int(input("Cidade destino: "))

soma=0
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while (saida!= -1 and destino != -1):
	
	i=(saida%10)-1
	j=(destino%10)-1
	
	soma=soma+mat[i, j]
	saida=destino
	destino=int(input("Cidade de destino: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
